@@ -1,1 +1,1 @@
-0.6.6
+0.6.7
